# g729_lib_demo

./: readme.md  readme.md~
g729_coder_demo/: Makefile.am  autogen.sh  g729_coder  readme.md
g729_decoder_demo/: Makefile.am  autogen.sh  autogen_clear.sh  configure.ac  g729_decoder  readme.md  readme.md~
g729_decoder_demo/.deps/: g729_coder-coder.Po  g729_decoder-decoder.Po  g729_exe-coder.Po
g729_lib/: Makefile.am  README.md  autogen.sh  autogen_clear.sh
g729_lib/.deps/: coder-acelp_ca.Po  coder-basic_op.Po  coder-bits.Po  coder-calcexc.Po  coder-cod_ld8a.Po  coder-coder.Po  coder-cor_func.Po  coder-de_acelp.Po  coder-dec_gain.Po  coder-dec_lag3.Po  coder-dec_ld8a.Po  coder-dec_sid.Po  coder-dspfunc.Po  coder-dtx.Po  coder-filter.Po  coder-gainpred.Po  coder-lpc.Po  coder-lpcfunc.Po  coder-lspdec.Po  coder-lspgetq.Po  coder-oper_32b.Po  coder-p_parity.Po  coder-pitch_a.Po  coder-post_pro.Po  coder-postfilt.Po  coder-pre_proc.Po  coder-pred_lt3.Po  coder-qsidgain.Po  coder-qsidlsf.Po  coder-qua_gain.Po  coder-qua_lsp.Po  coder-tab_dtx.Po  coder-tab_ld8a.Po  coder-taming.Po  coder-util.Po  coder-vad.Po  coder.Po  libg729_a-acelp_ca.Po  libg729_a-basic_op.Po  libg729_a-bits.Po  (+79 more)
